fix: resolve Sonar maintainability issues in backend
Agent-Logs-Url: https://github.com/DeniseRea/sqa-inventory-project/sessions/b9043390-8250-4879-951b-7585044a3b75

Co-authored-by: DeniseRea <105187806+DeniseRea@users.noreply.github.com>